2005-10-04  Tom Tromey  <tromey@redhat.com>

	* java/lang/ref/Reference.java (nextOnQueue): Changed type.
	* java/lang/ref/ReferenceQueue.java (first): Changed type.

2005-10-01  Jeroen Frijters  <jeroen@frijters.net>

	* vm/reference/java/lang/reflect/Constructor.java
	(getSignature): New method.
	(getGenericExceptionTypes): New method.
	(getGenericParameterTypes): New method.
	* vm/reference/java/lang/reflect/Field.java
	(getGenericType): New method.
	(getSignature): New method.
	* vm/reference/java/lang/reflect/Method.java
	(getSignature): New method.
	(getGenericExceptionTypes): New method.
	(getGenericParameterTypes): New method.
	(getGenericReturnType): New method.

2005-09-30  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/lang/reflect/FieldSignatureParser.java: New file.
	* gnu/java/lang/reflect/ClassSignatureParser.java,
	gnu/java/lang/reflect/GenericSignatureParser.java,
	gnu/java/lang/reflect/MethodSignatureParser.java:
	Finished implementation.

2005-09-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/awt/peer/qt/QtGraphics.java:
	(getRenderingHints()): Create a clone as no such
	constructor exists with generic typing.
	(setRenderingHints(Map<?,?>)): Added parametric typing
	and fixed use of RenderingHints constructor.
	* java/awt/AWTEventMulticaster.java:
	(getListeners(EventListener,Class<T>)): Added generic
	typing.
	* java/awt/Component.java:
	(getListeners(Class<T>)): Likewise.
	(getFocusTraversalKeys(int)): Likewise.
	* java/awt/Font.java:
	(Font(Map<? extends Attribute,?>)): Likewise.
	(deriveFont(Map<? extends Attribute,?>)): Likewise.
	(getAttributes()): Likewise.
	(getAvailableAttributes()): Simplified naming with static import.
	(getFont(Map<? extends Attribute,?>)): Added generic typing.
	* java/awt/Graphics2D.java:
	(setRenderingHints(Map<?,?>)): Likewise.
	(addRenderingHints(Map<?,?>)): Likewise.
	* java/awt/KeyboardFocusManager.java:
	(setDefaultFocusTraversalKeys(int,Set<? extends KeyStroke>)):
	Likewise.